# Demo-for-Amharic-NLP

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: amharic_nlp.hpp  cosine_similarity.hpp  indexer.hpp  stopword_remover.h  utils.hpp
include/imgui/: imgui.h
src/: CMakeLists.txt  information_retrival.cpp  retrieve.cpp
